--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,19 @@
 
   <name>play-rest-api-archetype</name>
 
+  <scm>
+    <connection>scm:git:git@github.com:josanly/rest-api-archetype.git</connection>
+    <url>scm:git:git@github.com:josanly/rest-api-archetype.git</url>
+    <developerConnection>scm:git:git@github.com:josanly/rest-api-archetype.git</developerConnection>
+  </scm>
   <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.1</version>
+      </plugin>
+    </plugins>
     <extensions>
       <extension>
         <groupId>org.apache.maven.archetype</groupId>
